--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,19 @@ body h1,h2,h3,h4,h5,h6{
     min-height:650px;
 	position: relative;
 }
+@media (min-width: 320px) and (max-width: 1024px) {
+  
+  #home {
+    background: url(http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto,f_auto/v1530033118/Portfolio/header-madhu11.png) no-repeat center top;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    -ms-background-size: contain;
+     min-height:650px;
+  position: relative;
+  background-size: contain;
+  
+}
 .top-header {
 	padding: 2em 0;
 }
