--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body h1,h2,h3,h4,h5,h6{
      min-height:650px;
   position: relative;
   background-size: contain;
-  
+	}
 }
 .top-header {
 	padding: 2em 0;
