--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@ span.border.one:after {
 .about-right{
       float: left;
   padding:0;
-  background:url(http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto:low,f_auto/v1530033118/Portfolio/about-madhu.jpg) no-repeat 0px 0px;
+  background:url(http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_50,f_auto/v1530033118/Portfolio/about-madhu.jpg) no-repeat 0px 0px;
   min-height:580px;
   background-size: cover;
    -o-background-size: cover;
