Social icons border removed

--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ ul.social-icons{
     display: block;
     height: 32px;
     width: 32px;
-       border: 2px solid #fff;
+    
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -255,13 +255,17 @@ ul.social-icons{
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); 
 }
 .social-icons li a.fb{
-  background-position: 3px -30px;
+  background: url(../images/fb.png)
+  
 }
 .social-icons li a.in{
-      background-position: 3px -62px;
+      background: url(../images/in.png)
 }
-.social-icons li a.dott {
-background-position: 3px -94px;
+.social-icons li a.git {
+  background: url(../images/git.png)
+}
+.social-icons li a.gplus {
+  background: url(../images/google.png)
 }
 .social-icons li a:hover::before {
     border-color: #00a78e;
